--- a/testSite/menu.html
+++ b/testSite/menu.html
@@ -5,7 +5,7 @@
         <!-- Basic Page Needs
 –––––––––––––––––––––––––––––––––––––––––––––––––– -->
         <meta charset="utf-8">
-        <title>CSE135 Bakery</title>
+        <title>CSE135 Bakery - Menu</title>
         <meta name="description" content="">
         <meta name="author" content="">
 
@@ -27,7 +27,6 @@
 –––––––––––––––––––––––––––––––––––––––––––––––––– -->
         <script src="//ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
 
-
         <!-- Favicon
 –––––––––––––––––––––––––––––––––––––––––––––––––– -->
         <link rel="icon" type="image/png" href="./assets/img/favicon.png">
@@ -43,81 +42,79 @@
             </div>
         </div>
 
-        <div class="section billboard">
+        <div class="section billboard" style="height: 8vw;">
             <div class="container">
                 <div class="row">
                     <div class="one-half column">
-                        <h4 class="hero-heading">Let's get this artisan bread.</h4>
-                    </div>
-                </div>
-                <div class="row">
-                    <div class="one-half column">
-                        <a class="button" href="./menu.html">View Menu</a>
+                        <a class="button" href="./index.html">Back</a>
                     </div>
                 </div>
             </div>
         </div>
 
 
-        <div class="section intro">
+        <div class="section menu">
             <div class="container">
-                <h3>We are...</h3>
-                <div class="row">
-                    <div class="one-third column value">
-                        <h4 class="value-multiplier">Local</h4>
-                        <h5 class="value-heading">Made in San Diego</h5>
-                        <p class="value-description">Yes our bread tastes like sunshine and vacation.</p>
+                <h3>Menu</h3>
+                <div class="row container-2">
+                    <div class="one-half column menu-item picture" id="brownie">
+                        <img class="u-max-full-width"  src="./assets/img/brownie-color.png" id="brownie-img">
                     </div>
-                    <div class="one-third column value">
-                        <h4 class="value-multiplier">Fresh</h4>
-                        <h5 class="value-heading">Made in small batch</h5>
-                        <p class="value-description">What taste better than freshly made bread??</p>
-                    </div>
-                    <div class="one-third column value">
-                        <h4 class="value-multiplier">Ethical </h4>
-                        <h5 class="value-heading">Fair wage for all</h5>
-                        <p class="value-description">We pay fairly for labor.</p>
+                    <div class="one-half column menu-item">
+                        <h5 class="value-heading">Fudge Brownie</h5>
+                        <p class="value-description">Yep just a brownie.</p>
+                        <a class="button" id="brownie-button" href="#">Order</a>
                     </div>
                 </div>
-                <a class="button" id="learn-more"href="#">Learn More</a>
+
+
+                <div class="row container-2">
+                    <div class="one-half column menu-item picture" id="cookie">
+                        <img class="u-max-full-width"  src="./assets/img/cookies-color.png" id="cookie-img">
+                    </div>
+                    <div class="one-half column menu-item">
+                        <h5 class="value-heading">Oatmeal Rasin Cookie</h5>
+                        <p class="value-description">The cookie ya wanna track.</p>
+                        <a class="button" id="cookie-button" href="#">Order</a>
+                    </div>
+                </div>
+
+                <div class="row container-2">
+
+                    <div class="one-half column menu-item picture" id="muffin">
+                        <img class="u-max-full-width"  src="./assets/img/muffin-color.png" id="muffin-img">
+                    </div>
+
+                    <div class="one-half column menu-item">
+                        <h5 class="value-heading">Ice Cream Muffin</h5>
+                        <p class="value-description">Did someone say ice cream.</p>
+                        <a class="button" id="muffin-button" href="#">Order</a>
+                    </div>
+                </div>
+
+                <div class="row container-2">
+
+                    <div class="one-half column menu-item picture" id="bread">
+                        <img class="u-max-full-width"  src="./assets/img/bread-color.png" id="bread-img">
+                    </div>
+                    <div class="one-half column menu-item">
+                        <h5 class="value-heading">Banana Bread</h5>
+                        <p class="value-description">Banana uwu na na.</p>
+                        <a class="button" id="bread-button" href="#">Order</a>
+                    </div>
+                </div>
             </div>
         </div>
 
-        <div class="section deliver">
-            <div class="container">
-                <h3 class="section-heading">We Cater!</h3>
 
-                <div class="row">
-
-                    <div class="one-half column value">
-                        <p class="section-description">Just give us a call at 858-900-0135.</p>
-                        <p>Our catering services is dope.</p>
-                    </div>
-                    <div class="one-half column value">
-                        <img class="u-max-full-width"  src="./assets/img/freedelivery.png">
-                    </div>
-                </div>
-            </div>
-
-        </div>
-
-        <div class="section satisfaction">
-            <div class="container">
-                <h3 class="section-heading">Customer Satisfaction</h3>
-                <p class="section-description">we really out here trying you know. UWU</p>
-                <div class="row">
-                </div>
-            </div>
-        </div>
-        
         <div class="section pictures">
             <div class="container">
-                    <div class="one-half column value">
-                        <img class="u-max-full-width"  src="../assets/img/topviewbread.jpg">
-                    </div>
                 <div class="one-half column value">
-                        <img class="u-max-full-width"  src="../assets/img/flour.jpg">
-                    </div>
+                    <img class="u-max-full-width"  src="../assets/img/topviewbread.jpg">
+                </div>
+                <div class="one-half column value">
+                    <img class="u-max-full-width"  src="../assets/img/flour.jpg">
+                </div>
             </div>
         </div>
 
