added a nonexistent function and more ids
Added an undefined “learmore-function()” to trigger javascript runtime
error.  gave more meaningful ids and classes

--- a/testSite/index.html
+++ b/testSite/index.html
@@ -52,7 +52,7 @@
                 </div>
                 <div class="row">
                     <div class="one-half column">
-                        <a class="button" href="./menu.html">View Menu</a>
+                        <a class="button" href="./menu.html" id="menu-button">View Menu</a>
                     </div>
                 </div>
             </div>
@@ -79,7 +79,7 @@
                         <p class="value-description">We pay fairly for labor.</p>
                     </div>
                 </div>
-                <a class="button" id="learn-more"href="#">Learn More</a>
+                <a class="button" id="learnmore-button"href="#" onclick="learnMoreFunction(); return false;">Learn More</a>
             </div>
         </div>
 
