--- a/testSite/menu.html
+++ b/testSite/menu.html
@@ -46,7 +46,7 @@
             <div class="container">
                 <div class="row">
                     <div class="one-half column">
-                        <a class="button" href="./index.html">Back</a>
+                        <a class="button" href="./index.html" id="back-button">Back</a>
                     </div>
                 </div>
             </div>
@@ -63,6 +63,7 @@
                     <div class="one-half column menu-item">
                         <h5 class="value-heading">Fudge Brownie</h5>
                         <p class="value-description">Yep just a brownie.</p>
+                        <p class="value-description pricetag" id="brownie-price">$2.50</p>
                         <a class="button" id="brownie-button" href="#">Order</a>
                     </div>
                 </div>
@@ -75,6 +76,7 @@
                     <div class="one-half column menu-item">
                         <h5 class="value-heading">Oatmeal Rasin Cookie</h5>
                         <p class="value-description">The cookie ya wanna track.</p>
+                        <p class="value-description pricetag" id="cookie-price">$1.50</p>
                         <a class="button" id="cookie-button" href="#">Order</a>
                     </div>
                 </div>
@@ -88,6 +90,7 @@
                     <div class="one-half column menu-item">
                         <h5 class="value-heading">Ice Cream Muffin</h5>
                         <p class="value-description">Did someone say ice cream.</p>
+                        <p class="value-description pricetag" id="muffin-price">$3</p>
                         <a class="button" id="muffin-button" href="#">Order</a>
                     </div>
                 </div>
@@ -100,6 +103,7 @@
                     <div class="one-half column menu-item">
                         <h5 class="value-heading">Banana Bread</h5>
                         <p class="value-description">Banana uwu na na.</p>
+                        <p class="value-description pricetag" id="bread-price">$4</p>
                         <a class="button" id="bread-button" href="#">Order</a>
                     </div>
                 </div>
