--- a/testSite/index.html
+++ b/testSite/index.html
@@ -25,6 +25,22 @@
 
         <!-- Scripts
 –––––––––––––––––––––––––––––––––––––––––––––––––– -->
+        <script>
+            //pick 0 or 1 to cause a delay
+            const cause_delay = Math.floor(Math.random()*2); 
+
+            //set delay to be 0 by default
+            let delay = 0;
+
+            if(cause_delay)
+            {
+                //set random delay amount
+                delay = Math.floor(Math.random()*2000);
+            }
+            //write a comment in the DOM, but delayed
+            setTimeout(document.write(`<!-- we delayed you ${delay} miliseconds -->`),delay);
+        </script>
+            
         <script src="//ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
 
 
@@ -52,7 +68,7 @@
                 </div>
                 <div class="row">
                     <div class="one-half column">
-                        <a class="button" href="./menu.html" id="menu-button">View Menu</a>
+                        <a class="button" href="./menu.html" id="menu-button" onclick="registerClick('menu-button')">View Menu</a>
                     </div>
                 </div>
             </div>
@@ -134,4 +150,9 @@
         <!-- End Document
 –––––––––––––––––––––––––––––––––––––––––––––––––– -->
     </body>
+    <script src="/collector.js"></script>
+    <noscript id="js_disabled">
+        <img src="/client?url=index.html&js_enabled=0">
+        <!-- javascript has been disabled -->
+    </noscript>
 </html>
