--- a/testSite/menu.html
+++ b/testSite/menu.html
@@ -38,7 +38,7 @@
 –––––––––––––––––––––––––––––––––––––––––––––––––– -->
         <div class="top-nav">
             <div class="container">
-                <h1>CSE135 Bakery</h1>
+                <h1><a href="./index.html" id="logo-button" onclick="registerClick('logo-button')">CSE135 Bakery</h1>
             </div>
         </div>
 
@@ -46,7 +46,7 @@
             <div class="container">
                 <div class="row">
                     <div class="one-half column">
-                        <a class="button" href="./index.html" id="back-button">Back</a>
+                        <a class="button" href="./index.html" id="back-button" onclick="registerClick('back-button')">Back</a>
                     </div>
                 </div>
             </div>
