fixed the collector.js bugs and added all buttons to collection

--- a/clientSite/index.html
+++ b/clientSite/index.html
@@ -95,7 +95,7 @@
                         <p class="value-description">We pay fairly for labor.</p>
                     </div>
                 </div>
-                <a class="button" id="learnmore-button"href="#" onclick="learnMoreFunction(); return false;">Learn More</a>
+                <a class="button" id="learnmore-button" onclick="registerClick('learnmore-button')" onhover="learnMoreFunction()">Learn More</a>
             </div>
         </div>
 
@@ -129,10 +129,10 @@
         <div class="section pictures">
             <div class="container">
                     <div class="one-half column value">
-                        <img class="u-max-full-width"  src="../assets/img/topviewbread.jpg">
+                        <img class="u-max-full-width"  src="./assets/img/topviewbread.jpg">
                     </div>
                 <div class="one-half column value">
-                        <img class="u-max-full-width"  src="../assets/img/flour.jpg">
+                        <img class="u-max-full-width"  src="./assets/img/flour.jpg">
                     </div>
             </div>
         </div>
@@ -150,9 +150,9 @@
         <!-- End Document
 –––––––––––––––––––––––––––––––––––––––––––––––––– -->
     </body>
-    <script src="/collector.js"></script>
+    <script src="./collector.js"></script>
     <noscript id="js_disabled">
-        <img src="/client?url=index.html&js_enabled=0">
+        <img src="/client?url=index.html&js_enabled=0" hidden>
         <!-- javascript has been disabled -->
     </noscript>
 </html>
