--- a/adminSite/login.html
+++ b/adminSite/login.html
@@ -46,7 +46,7 @@
             <div class="container">
                 <div class="row">
                     <div class="tewlve column login-form">
-                        <form id="login-form" action="./checklogin.php">
+                        <form id="login-form" action="./checklogin.php" action="POST">
                             <div class="row">
                                 <div class="tewlve columns">
                                     <label for="Username">Username</label>
