--- a/adminSite/login.html
+++ b/adminSite/login.html
@@ -51,14 +51,14 @@
                     <div class="tewlve column login-form">
                         <form id="login-form" action="./login.php" action="POST">
                             <div class="row">
-                                <div class="tewlve columns">
+                                <div class="twelve columns">
                                     <label for="Username">Username</label>
                                     <input class="u-full-width" name="username" placeholder="User" id="username-input">
                                 </div>
                             </div>
 
                             <div class="row">
-                                <div class="tewlve columns">
+                                <div class="twelve columns">
                                     <label for="Password">Password</label>
                                     <input class="u-full-width" name="password" type="password" placeholder="Type in your password" id="password-input">
                                 </div>
