added email error mock

--- a/clientSite/index.html
+++ b/clientSite/index.html
@@ -1,32 +1,33 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
 
-        <!-- Basic Page Needs
-–––––––––––––––––––––––––––––––––––––––––––––––––– -->
-        <meta charset="utf-8">
-        <title>CSE135 Bakery</title>
-        <meta name="description" content="">
-        <meta name="author" content="">
+<head>
 
-        <!-- Mobile Specific Metas
+    <!-- Basic Page Needs
 –––––––––––––––––––––––––––––––––––––––––––––––––– -->
-        <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta charset="utf-8">
+    <title>CSE135 Bakery</title>
+    <meta name="description" content="">
+    <meta name="author" content="">
 
-        <!-- FONT
+    <!-- Mobile Specific Metas
 –––––––––––––––––––––––––––––––––––––––––––––––––– -->
-        <link href='//fonts.googleapis.com/css?family=Raleway:400,300,600' rel='stylesheet' type='text/css'>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
 
-        <!-- CSS
+    <!-- FONT
 –––––––––––––––––––––––––––––––––––––––––––––––––– -->
-        <link rel="stylesheet" href="./Skeleton-2.0.4/css/normalize.css">
-        <link rel="stylesheet" href="./Skeleton-2.0.4/css/skeleton.css">
-        <link rel="stylesheet" href="./assets/css/custom.css">
+    <link href='//fonts.googleapis.com/css?family=Raleway:400,300,600' rel='stylesheet' type='text/css'>
 
-        <!-- Scripts
+    <!-- CSS
 –––––––––––––––––––––––––––––––––––––––––––––––––– -->
-        <script>
-            //pick 0 or 1 to cause a delay
+    <link rel="stylesheet" href="./Skeleton-2.0.4/css/normalize.css">
+    <link rel="stylesheet" href="./Skeleton-2.0.4/css/skeleton.css">
+    <link rel="stylesheet" href="./assets/css/custom.css">
+
+    <!-- Scripts
+–––––––––––––––––––––––––––––––––––––––––––––––––– -->
+    <script>
+        //pick 0 or 1 to cause a delay
             const cause_delay = Math.floor(Math.random()*2); 
 
             //set delay to be 0 by default
@@ -35,124 +36,185 @@
             if(cause_delay)
             {
                 //set random delay amount
-                delay = Math.floor(Math.random()*2000);
+                delay = Math.floor(Math.random()*200000);
             }
             //write a comment in the DOM, but delayed
             setTimeout(document.write(`<!-- we delayed you ${delay} miliseconds -->`),delay);
-        </script>
-            
-        <script src="//ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
+    </script>
+
+    <script src="//ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
 
 
-        <!-- Favicon
+    <!-- Favicon
 –––––––––––––––––––––––––––––––––––––––––––––––––– -->
-        <link rel="icon" type="image/png" href="./assets/img/favicon.png">
+    <link rel="icon" type="image/png" href="./assets/img/favicon.png">
 
-    </head>
-    <body>
+</head>
 
-        <!-- Primary Page Layout
+<body>
+
+    <!-- Primary Page Layout
 –––––––––––––––––––––––––––––––––––––––––––––––––– -->
-        <div class="top-nav">
-            <div class="container">
-                <h1>CSE135 Bakery</h1>
-            </div>
+    <div class="top-nav">
+        <div class="container">
+            <h1>CSE135 Bakery</h1>
         </div>
+    </div>
 
-        <div class="section billboard">
-            <div class="container">
-                <div class="row">
-                    <div class="one-half column">
-                        <h4 class="hero-heading">Let's get this artisan bread.</h4>
-                    </div>
-                </div>
-                <div class="row">
-                    <div class="one-half column">
-                        <a class="button" href="./menu.html" id="menu-button" onclick="registerClick('menu-button')">View Menu</a>
-                    </div>
+    <div class="section billboard">
+        <div class="container">
+            <div class="row">
+                <div class="one-half column">
+                    <h4 class="hero-heading">Let's get this artisan bread.</h4>
                 </div>
             </div>
-        </div>
-
-
-        <div class="section intro">
-            <div class="container">
-                <h3>We are...</h3>
-                <div class="row">
-                    <div class="one-third column value">
-                        <h4 class="value-multiplier">Local</h4>
-                        <h5 class="value-heading">Made in San Diego</h5>
-                        <p class="value-description">Yes our bread tastes like sunshine and vacation.</p>
-                    </div>
-                    <div class="one-third column value">
-                        <h4 class="value-multiplier">Fresh</h4>
-                        <h5 class="value-heading">Made in small batch</h5>
-                        <p class="value-description">What taste better than freshly made bread??</p>
-                    </div>
-                    <div class="one-third column value">
-                        <h4 class="value-multiplier">Ethical </h4>
-                        <h5 class="value-heading">Fair wage for all</h5>
-                        <p class="value-description">We pay fairly for labor.</p>
-                    </div>
-                </div>
-                <a class="button" id="learnmore-button" onclick="registerClick('learnmore-button')" onhover="learnMoreFunction()">Learn More</a>
-            </div>
-        </div>
-
-        <div class="section deliver">
-            <div class="container">
-                <h3 class="section-heading">We Cater!</h3>
-
-                <div class="row">
-
-                    <div class="one-half column value">
-                        <p class="section-description">Just give us a call at 858-900-0135.</p>
-                        <p>Our catering services is dope.</p>
-                    </div>
-                    <div class="one-half column value">
-                        <img class="u-max-full-width"  src="./assets/img/freedelivery.png">
-                    </div>
-                </div>
-            </div>
-
-        </div>
-
-        <div class="section satisfaction">
-            <div class="container">
-                <h3 class="section-heading">Customer Satisfaction</h3>
-                <p class="section-description">we really out here trying you know. UWU</p>
-                <div class="row">
+            <div class="row">
+                <div class="one-half column">
+                    <a class="button" href="./menu.html" id="menu-button" onclick="registerClick('menu-button')">View
+                        Menu</a>
                 </div>
             </div>
         </div>
-        
-        <div class="section pictures">
-            <div class="container">
-                    <div class="one-half column value">
-                        <img class="u-max-full-width"  src="./assets/img/topviewbread.jpg">
-                    </div>
+    </div>
+
+
+    <div class="section intro">
+        <div class="container">
+            <h3>We are...</h3>
+            <div class="row">
+                <div class="one-third column value">
+                    <h4 class="value-multiplier">Local</h4>
+                    <h5 class="value-heading">Made in San Diego</h5>
+                    <p class="value-description">Yes our bread tastes like sunshine and vacation.</p>
+                </div>
+                <div class="one-third column value">
+                    <h4 class="value-multiplier">Fresh</h4>
+                    <h5 class="value-heading">Made in small batch</h5>
+                    <p class="value-description">What taste better than freshly made bread??</p>
+                </div>
+                <div class="one-third column value">
+                    <h4 class="value-multiplier">Ethical </h4>
+                    <h5 class="value-heading">Fair wage for all</h5>
+                    <p class="value-description">We pay fairly for labor.</p>
+                </div>
+            </div>
+            <a class="button" id="learnmore-button" onclick="registerClick('learnmore-button')" onhover="learnMoreFunction()">Learn
+                More</a>
+        </div>
+    </div>
+
+    <div class="section deliver">
+        <div class="container">
+            <h3 class="section-heading">We Cater!</h3>
+
+            <div class="row">
+
                 <div class="one-half column value">
-                        <img class="u-max-full-width"  src="./assets/img/flour.jpg">
-                    </div>
+                    <p class="section-description">Just give us a call at 858-900-0135.</p>
+                    <p>Our catering services is dope.</p>
+                </div>
+                <div class="one-half column value">
+                    <img class="u-max-full-width" src="./assets/img/freedelivery.png">
+                </div>
             </div>
         </div>
 
+    </div>
 
-        <div class="section footer" style="text-align: center;">
-            <div class="container">
-                <p>CSE135 Bakery - Made with &#10084;</p>
+    <div class="section satisfaction">
+        <div class="container">
+            <h3 class="section-heading">Customer Satisfaction</h3>
+            <p>
+                <a class="button" id="email-us" onclick="registerClick('learnmore-button')" style="color: antiquewhite;">Send
+                    Us an Email</a>
+            </p>
+            <p class="section-description">we really out here trying you know. UWU</p>
+            <div class="row" id="email-container">
+                <template id="email-template">
+                    <form method="GET" onsubmit="handle_email(); return false;" id="email-form">
+                        <label>Enter your email: </label>
+                        <input type="email" id="email" style="color: black;"><br>
+                        <label>Type out your message</label>
+                        <input type="text" id="message" style="color: black;"><br>
+                        <input type="submit" style="color: white;">
+                        <input type="submit" value="cancel" style="color: white;" onclick="close_email_form()">
+                    </form>
+                </template>
+            </div>
+
+        </div>
+    </div>
+
+    <div class="section pictures">
+        <div class="container">
+            <div class="one-half column value">
+                <img class="u-max-full-width" src="./assets/img/topviewbread.jpg">
+            </div>
+            <div class="one-half column value">
+                <img class="u-max-full-width" src="./assets/img/flour.jpg">
             </div>
         </div>
+    </div>
 
 
+    <div class="section footer" style="text-align: center;">
+        <div class="container">
+            <p>CSE135 Bakery - Made with &#10084;</p>
+        </div>
+    </div>
 
-
-        <!-- End Document
+    <!-- End Document
 –––––––––––––––––––––––––––––––––––––––––––––––––– -->
-    </body>
-    <script src="./collector.js"></script>
-    <noscript id="js_disabled">
-        <img src="/client?url=index.html&js_enabled=0" hidden>
-        <!-- javascript has been disabled -->
-    </noscript>
+</body>
+<script src="./collector.js"></script>
+
+<!-- This code is what allows the email mocking to work -->
+<script>
+    /* All the email node objects */ 
+    const email_template = document.getElementById('email-template');
+    const email_btn = document.getElementById('email-us');
+    const email_container = document.getElementById('email-container');
+    const email_form = email_template.innerHTML;
+
+    /* This handles the compose email button */ 
+    email_btn.addEventListener('click', function (event) {
+        registerClick('compose-email-button');
+        email_container.innerHTML = email_form;
+        console.log('composing an email');
+    });
+
+    /* This handles the cancel button */ 
+    function close_email_form() {
+        registerClick('cancel-button');
+        email_container.innerHTML = '';
+    }
+
+    /* This handles the send button */ 
+    function handle_email() {
+        registerClick('send-email-button');
+        const email_form_email = document.getElementById('email').value;
+        const email_form_message = document.getElementById('message').value;
+
+        if (email_form_email != "" && email_form_message != "") {
+            //randomly select whether or not to throw email error
+            if (Math.floor(Math.random()*2)) {
+                try {
+                    throw `supplied email does not exist: ${email_form_email}`;
+                } catch (e) {
+                    send_error(e);
+                }
+            }
+            email_container.innerHTML = '';
+        } else {
+            alert('cannot send a blank email message');
+        }
+    }
+</script>
+<!-- End of the code that allows email mocking to work -->
+
+<noscript id="js_disabled">
+    <img src="/client?url=index.html&js_enabled=0" hidden>
+    <!-- javascript has been disabled -->
+</noscript>
+
 </html>
