added sections visually

--- a/adminSite/client-report.html
+++ b/adminSite/client-report.html
@@ -63,6 +63,7 @@ include('session.php');
                     </div>
                 </div>
             </div>
+            <hr class="container">
         </div>
 
         <div class="section form">
@@ -101,6 +102,7 @@ include('session.php');
 
                 </div>
             </div>
+            <hr class="container">
         </div>
 
 
@@ -116,6 +118,7 @@ include('session.php');
                     </div>
                 </div>
             </div>
+            <hr class="container">
         </div>
 
 
