changed some file names for clarity

--- a/adminSite/admin-report.html
+++ b/adminSite/admin-report.html
@@ -1,6 +1,3 @@
-<?php
-include('session.php');
-?>
 <!DOCTYPE html>
 <html lang="en">
     <head>
@@ -8,7 +5,7 @@ include('session.php');
         <!-- Basic Page Needs
 –––––––––––––––––––––––––––––––––––––––––––––––––– -->
         <meta charset="utf-8">
-        <title>Admins-Report</title>
+        <title>Report</title>
         <meta name="description" content="">
         <meta name="author" content="">
 
